[package]
name = "ansi2png"
version = "0.1.0"
edition = "2021"

[dependencies]
ab_glyph = "0.2.23" # For font loading and glyph rendering
ansi-parser = "0.9.1"
clap = { version = "4.5.21", features = ["derive"] }
image = { version = "0.25.5", features = ["png"] }
lazy_static = "1.5.0"
once_cell = "1.19.0"
regex = "1.10.2"
ansi-to-tui = { version = "4.0.0", optional = true } # Might use later if needed, but manual parsing is safer for now
vte = "0.13.1"
strip-ansi-escapes = "0.2.0"
termwiz = "0.22"
chrono = "0.4"
base64 = "0.22.1"
unicode-width = "0.1.10"
