[package]
name = "ansi2png"
version = "0.1.0"
edition = "2021"

[dependencies]
ab_glyph = "0.2.32" # Updated
clap = { version = "4.5.57", features = ["derive"] } # Updated
image = { version = "0.25.9", features = ["png"] } # Updated
regex = "1.11.0" # Updated
vte = "0.15.0" # Updated (Major)
strip-ansi-escapes = "0.2.1" # Updated
termwiz = "0.23.3" # Updated
chrono = "0.4.43" # Updated
base64 = "0.22.1"
unicode-width = "0.2.2" # Updated (Major)
